# crabmic

./: Cargo.toml
crates/client/: Cargo.toml
crates/client/examples/: headless.rs  show_volume.rs
crates/client/src/: audio_io.rs  config.rs  error.rs  lib.rs
crates/client/src/api/: audio.rs
crates/crabmic-core/: Cargo.toml
crates/crabmic-core/src/: error.rs  lib.rs  utils.rs
crates/model/: Cargo.toml
crates/model/src/: lib.rs
crates/server/: Cargo.toml
crates/server/examples/simple_server/: Cargo.toml
crates/server/examples/simple_server/src/: main.rs
crates/server/src/: error.rs  lib.rs
resource/: cert.pem  key.pem  openssl.cnf
