cargo-features = ["edition2024"]

[workspace]
members = ["crates/server", "crates/client", "crates/model"]


resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
crabmic_server = { path = "crates/crabmic-server" }

# io
cpal = "0.15"
# codec
opus = "0.3"
tracing = "0.1"
quinn = "0.11"
bytes = "1.8"


# async
tokio = "1"
tokio-util = "0.7"
flume = "0.11"