cargo-features = ["edition2024"]

[package]
name = "crabmic_client"
version.workspace = true
edition.workspace = true

[lib]
name = "crabmic_client"
path = "src/lib.rs"

[dependencies]
flume = { workspace = true }
cpal = { workspace = true }
opus = { workspace = true }
tracing = { workspace = true }
quinn = { workspace = true }
ring = { version = "0.17" }
bytes = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
crabmic_model = { version = "0.1.0", path = "../model" }
rustls-pemfile = { version = "2"}
[dev-dependencies]
# testing
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
